--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ img.img-fluid.sec-logo-img {
   width: 70%;
 }
 .herdericon {
-  display: flex;
+  display: flex !important;
   align-items: center;
   justify-content: space-evenly;
 }
@@ -605,20 +605,31 @@ background-position: bottom;
   padding-right: 30px;
 }
 .socalmedia p a{
-  border: 1px solid #E7E7E7;
+  border: 1px solid #fff;
+  background: #fff;
   border-radius: 50px;
   padding: 15px 17px;
+  color: #000;
+}
+.socalmedia p a:hover i{
+  font-size: 20px;
+  color: #fff;
 }
 .socalmedia p a i{
   font-size: 20px;
+  width: 18px;
+  height: 32px;
   color: #000;
 }
 .socalmedia p a:hover{
-  border: 1px solid #000;
+  border: 1px solid #fff;
+  background: transparent;
+  color: #fff;
+
 }
 .secfootrbg{
   background: #1D1D1D;
-  padding: 50px 10px;
+  padding: 50px 10px 30px 10px;
 }
 .secquick{
   font-family: 'Poppins';
@@ -638,9 +649,17 @@ padding-top: 25px;
 }
 .copysec{
   font-family: 'Roboto';
-  text-align: center;
+  margin: 0;
   font-size: 14px;
-  color: #000;
+  color: #fff;
+}
+.secpaynelo{
+  display: flex;
+  flex-direction: column;
+    align-items: flex-end;
+}
+.seccoydiv{
+  align-items: center;
 }
 
 
@@ -973,16 +992,19 @@ button.owl-prev span{
 .sechead{
   display: flex;
 }
-.secaddre{
-  padding-top: 20px;
-}
 
 .secaddre a{
 font-family: 'Inter';
-color: #000;
+color: #fff;
 font-size: 18px;
 text-decoration: none;
 }
+.secaddre {
+  font-family: 'Inter';
+  color: #fff;
+  font-size: 18px;
+  text-decoration: none;
+  }
 p.secfootlogomobile {
   display: none;
 }
@@ -1023,4 +1045,20 @@ button.owl-dot.active {
   border: 1px solid #000;
   background-color:transparent ;
   color: #000;
+}
+.sectextfoot p i{
+  color: #EA4335;
+}
+.secaddre i{
+  color: #EA4335;
+}
+.secloc{
+  padding-top: 20px;
+}
+.secfooterbg2{
+  background: #000;
+  padding: 20px 10px;
+}
+.mobilesec{
+  display: none;
 }
