--- a/css/style.css
+++ b/css/style.css
@@ -1063,3 +1063,419 @@ button.owl-dot.active {
 .mobilesec{
   display: none;
 }
+
+/* prodict deaatal */
+
+#innerpages{
+  background: #000;
+  margin-bottom: 30px;
+}
+
+#innerpages li a.nav-link.px-4.text-light {
+  color: #000 !important;
+}
+
+#innerpages .sec-cont-btn {
+  color: #fff !important;
+}
+
+#innerpages .sec-cart {
+  color: #000;
+}
+
+#innerpages .search-field {
+  background-image: url(../images/search-icon-black.png);
+}
+
+.reset-filter-btn {
+  color: #303030;
+  text-align: center;
+  font-family: 'poppins';
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  border-radius: 8px;
+  border: 1px solid #979797;
+  background: #FFF;
+  padding: 8px 15px;
+  text-decoration: none;
+}
+
+.sec-fil {
+  color: #979797;
+  font-family: 'poppins';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.filter-arr {
+  color: #979797;
+  font-family: 'poppins';
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.filter-arr:hover {
+  color: #000;
+  font-weight: 600;
+}
+
+.filter-arr a {
+  color: #979797;
+  font-family: 'poppins';
+  font-size: 18px;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+.filter-arr a:hover {
+  color: #000;
+  font-weight: 600;
+}
+
+.accordion-button:not(.collapsed) {
+  background-color: transparent;
+  color: #000;
+  font-family: 'Poppins';
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  box-shadow: 0;
+}
+
+button.accordion-button.border-bottom.fw-semibold.collapsed {
+  color: #000;
+  font-family: 'Poppins';
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.accordion-button::after {
+  background-image: url(../images/+.png) !important;
+  background-size: auto !important;
+}
+
+.accordion-button:not(.collapsed)::after {
+  background-image: url(../images/-.png) !important;
+}
+
+.list-group-flush>.list-group-item {
+  border: 0;
+  padding: 0px !important;
+  padding-left: 10px !important;
+}
+
+.sec-productslider .owl-stage {
+  display: flex !important;
+  flex-direction: column;
+
+}
+
+.sec-img-slider {
+  display: flex;
+}
+
+#slider {
+  width: 70%;
+}
+
+#thumb {
+  width: 80%;
+}
+
+
+
+
+/* new */
+
+.wrapper {
+  position: relative;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.img-selection {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100px;
+}
+
+.img-thumbnail:first-of-type {
+  margin-top: 0;
+}
+
+.img-thumbnail {
+  margin-top: 10px;
+  width: 79%;
+  border: 1px solid #ddd;
+  cursor: pointer;
+  transition: .3s ease;
+  opacity: .5;
+}
+
+.img-thumbnail:hover {
+  opacity: 1;
+}
+
+.img-thumbnail.selected {
+  opacity: 1;
+}
+
+.big-img {
+  position: relative;
+  width: 425px;
+  height: 445px;
+  border: 1px solid #ddd;
+  cursor: zoom-in;
+  overflow: hidden;
+}
+
+.big-img img.zoom {
+  position: absolute;
+  transition: width 0.2s ease-out, opacity 0.2s ease-out 0.2s;
+}
+
+.display-img {
+  width: 100%;
+}
+
+.qty-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+/* DT */
+.dt-name {
+  color: #000;
+  font-family: 'Poppins';
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.dt-fl {
+  color: #000;
+  font-family: 'Poppins';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.dt-ser {
+  color: #484848;
+  font-family: 'Poppins';
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.dt-off {
+  color: #EA544B;
+  font-family: 'Poppins';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  margin: 0;
+}
+
+.dt-mrp {
+  color: #979797;
+  font-family: 'Poppins';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  text-decoration-line: line-through;
+}
+
+.dt-sale {
+  color: #000;
+  font-family: 'Poppins';
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.dt-tex {
+  color: #484848;
+  font-family: 'Poppins';
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.dt-fl-qty {
+  color: #1C1E1E;
+  font-family: 'Poppins';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  padding: 18px 0px 10px 0px;
+}
+
+.st-fl-btn {
+  color: #000;
+  font-family: 'Poppins';
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  border: 1px solid #BBB;
+  background: #EEE;
+  padding: 8px 15px;
+  text-decoration: none;
+}
+
+.st-fl-btn:hover {
+  color: #FFF;
+  background: #EA544B;
+}
+
+button.qty-btn-minus.btn-light,
+button.qty-btn-plus.btn-light {
+  border-radius: 52px;
+  background: #EA544B;
+  width: 26px;
+  height: 50px;
+  color: #fff;
+  border: 0;
+  margin: 0px 5px;
+}
+
+.qty-container input.input-qty {
+  border: 1px solid #D9D9D9;
+  background: #F9F9F9;
+  width: 85px;
+  height: 50px;
+  padding: 5px;
+  text-align: center;
+}
+
+.add-cart-btn {
+  border: 1px solid #EA544B;
+  background: #FFF;
+  text-align: center;
+  padding: 8px 150px;
+  text-decoration: none;
+  color: #000;
+  text-align: center;
+  font-family: 'Poppins';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.add-cart-btn:hover {
+  color: #fff;
+  background: #EA544B;
+}
+
+.buy-now-btn {
+  border: 1px solid #EA544B;
+  color: #fff;
+  background: #EA544B;
+  text-align: center;
+  padding: 8px 170px;
+  text-decoration: none;
+  text-align: center;
+  font-family: 'Poppins';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.buy-now-btn:hover {
+  color: #000;
+  background: #fff;
+  border: 1px solid #EA544B;
+}
+
+.left-right {
+  padding: 0px 30px;
+}
+
+.p-Description div#nav-tab {
+  justify-content: flex-start;
+  border: 0;
+}
+
+.p-Description .nav-tabs .nav-link.active {
+  border: 1px solid #CC0D1D;
+  background: #FFF;
+  background: #f4f4f4;
+  border-radius: 0;
+  border-bottom: 0px;
+  color: #CC0D1D;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+.p-Description .nav-tabs .nav-link {
+  border: 1px solid #CC0D1D;
+  background: #FFF;
+  background: #f4f4f4;
+  border-radius: 0;
+  border-bottom: 0px;
+  color: #000;
+  font-family: 'Poppins';
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 700;
+  margin-right: 30px;
+  padding: 10px 20px;
+  text-transform: capitalize;
+}
+.p-Description div#nav-tabContent {
+  border: 1px solid #CC0D1D !important;
+  background: #f4f4f4;
+  margin-top: 2px;
+}
+.sec-relatrd{
+  color: #000;
+font-family: 'Poppins';
+font-size: 50px;
+font-style: normal;
+font-weight: 700;
+text-align: center;
+}
+.tabb .owl-nav {
+  font-size: 40px;
+  margin-top: -286px;
+  position: relative;
+  z-index: 99;
+  margin-bottom: 290px;
+}
+.tabb button.owl-next{
+float: right;
+padding: 0px 10px 10px 10px !important;
+background:#EA544B !important;
+color: #fff !important;
+}
+.tabb button.owl-prev{
+  padding: 0px 10px 10px 10px !important;
+  background:#EA544B !important;
+  color: #fff !important;
+}
+.tabb button.owl-prev:hover , .tabb button.owl-next:hover{
+background: red !important;
+}
+marquee.html-marquee {
+  padding: 10px 0px 5px 0px;
+}
+ul.list-group.list-group-flush {
+  padding-top: 20px;
+}
+
+.tabhome .item {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
