--- a/css/responsive.css
+++ b/css/responsive.css
@@ -226,7 +226,7 @@ button.nav-link {
 .dt-sale {
   font-size: 30px;
 }
-
+}
 
 
 
@@ -439,7 +439,7 @@ ul.Countdown-ul li span {
   text-align: center;
 }
 .big-img {
-  width: 293px;
+  width: 100%;
   height: 319px;
 }
 .img-selection {
@@ -495,7 +495,9 @@ ul.Countdown-ul li span {
 }
 .sec-relatrd {
   font-size: 23px;
-
+}
+.container-fluid.pb-5.pt-5 {
+  padding: 0 !important;
 }
 }
 
