--- a/css/style.css
+++ b/css/style.css
@@ -943,6 +943,9 @@ button.nav-link.col-lg-12 p {
   font-weight: 300;
   color: #000;
 }
+.catgsec{
+  color: #000;
+}
 .secbtntest{
   padding: 30px 0px;
 }
