--- a/css/style.css
+++ b/css/style.css
@@ -1559,3 +1559,65 @@ a{
   color: #707070;
   font-size: 13px;
 }
+.secvideobg iframe{
+  width: 100%;
+  height: 350px;
+}
+
+/* contact */
+.sec-contact-padding {
+  padding: 60px 0px 80px 0px;
+}
+.sec-cont-hh {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  color: #202031;
+}   
+.form-group {
+  margin-bottom: 15px;
+  padding-left: 0px;
+}
+.form-control {
+  font-family: 'Poppins' !important;
+  font-size: 18px !important;
+  color: #9E9E9E !important;
+  border: 1px solid #d7d7d7;
+  border-radius: 5px;
+}
+.sec-menu-btn2 {
+  background: #000;
+  font-family: 'Poppins';
+  font-style: normal;
+  text-transform: capitalize;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: #fff;
+  padding: 10px 30px;
+  border-radius: 50px;
+  border: none;
+}
+.sec-menu-btn2:hover {
+  background: #474747;
+  color: #fff;
+}
+.sec-cont-pp {
+  font-family: 'Poppins';
+  font-size: 20px;
+  color: #000;
+}
+.seccont-add-h {
+  font-family: 'Poppins';
+  font-size: 20px;
+  font-weight: 700;
+  color: #000;
+}
+.seccont-add-p {
+  font-family: 'Poppins';
+  font-weight: 400;
+  font-size: 18px;
+  color: #0A142F;
+  text-decoration: none;
+}
