--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,6 +7,9 @@
     width: 1903px;
     margin: auto;
   }
+  .secaboutimgbg{
+    margin-top: -30px;
+  }
   .secherocony{
     max-width: 1700px !important;
   }
