--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,6 +7,13 @@
     width: 1903px;
     margin: auto;
   }
+  .secwhybtn {
+    text-align: center;
+    padding: 40px 0px 95px 0px;
+}
+.tabb .owl-dots {
+  padding-bottom: 80px;
+}
   .secaboutimgbg{
     margin-top: -30px;
   }
@@ -70,6 +77,7 @@ button.nav-link.col-lg-12 p {
 }
 .secherotext {
   font-size: 110px;
+  padding-top: 30px;
 }
 .herobtn a {
   font-size: 25px;
