--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,6 +11,9 @@
     text-align: center;
     padding: 40px 0px 95px 0px;
 }
+.secabbtex p {
+  font-size: 26px;
+}
 .tabb .owl-dots {
   padding-bottom: 80px;
 }
@@ -167,7 +170,7 @@ div#navbarOffcanvas {
   font-size: 57px;
 }
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link {
-  padding: 23px 0px 10px 0px;
+  padding: 10px 22px 0px 22px;
   border: 0px !important;
 }
 button.nav-link {
@@ -541,6 +544,20 @@ ul.Countdown-ul li span {
 td {
   color: #000 !important  ;
   font-size: 15px !important;
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link {
+  padding: 10px 22px 10px 22px;
+  border: 0px !important;
+  background: #fff;
+  margin: 3px;
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+  background: #000;
+  color: #fff;
+  border-radius: 0;
+}
+.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
+  color: #000 !important;
 }
 }
 
