--- a/css/style.css
+++ b/css/style.css
@@ -894,7 +894,7 @@ padding-top: 25px;
 }
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link{
-  padding: 10px 0px 10px 0px;
+  padding: 0px 62px;
   border: 0px !important;
 }
 
