--- a/css/responsive.css
+++ b/css/responsive.css
@@ -90,6 +90,7 @@ button.nav-link.col-lg-12 p {
 .nav-tabs .nav-link {
   text-align: start;
   font-size: 24px;
+  padding:0;
 }
 .deals-bg {
   height: 516px;
@@ -365,6 +366,7 @@ button.navbar-toggler {
 }
 .secherotext {
   font-size: 39px;
+  padding-top: 30px;
 }
 .herobtn a {  
   font-size: 16px;
@@ -380,12 +382,12 @@ button.navbar-toggler {
   margin-top: -224px;
 }
 .product-discount {
-  font-size: 21px;
+  font-size: 13px;
 }
 .col-sm-3.sec-cart-main-box {
   padding-left: 0;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
 }
 .col-sm-9 {
   padding: 0;
@@ -434,7 +436,7 @@ ul.Countdown-ul li span {
   width: 100%;
 }
 .bestsecbg {
-  padding-top: 5px;
+  padding-top: 35px;
 }
 .secbesttitle {
   width: 100%;
@@ -546,14 +548,14 @@ td {
   font-size: 15px !important;
 }
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link {
-  padding: 10px 22px 10px 22px;
+  padding: 10px 10px;
   border: 0px !important;
   background: #fff;
   margin: 3px;
 }
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
   background: #000;
-  color: #fff;
+  color: #fff !important;
   border-radius: 0;
 }
 .navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
@@ -570,7 +572,29 @@ div#nav-tab {
 .nav-link:focus, .nav-link:hover {
   color: #000 !important;
 }
+.product-name {
+  font-size: 14px;
 }
+.product-mrp {
+  font-size: 12px;
+}
+.secmobile {
+    padding-top: 30px;
+}
+.sec-cont-hh {
+    font-size: 28px;
+    padding-bottom: 20px;
+}
+    .secindiatext2 {
+        font-size: 12px;
+        padding-bottom: 30px;
+    }
+    .gooleimg {
+    text-align: center;
+    padding-bottom: 30px;
+}
+}
+
 
 
 
