--- a/css/responsive.css
+++ b/css/responsive.css
@@ -776,13 +776,12 @@
     text-transform: uppercase;
     font-weight: 500;
 }
-ul.dropdown-menu.show {
-  border: 0;
-  padding-top: 0;
-  padding-left: 8px;
-}
+
 ul.dropdown-menu.show {
   margin-top: -6px;
+  padding: 20px 8px;
+  border: 0;
+  padding-top: 0;
 }
 }
 
